--- a/proj2.ipynb
+++ b/proj2.ipynb
@@ -4001,7 +4001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "a55d2919",
    "metadata": {},
    "outputs": [
@@ -4013,7 +4013,7 @@
        },
        "data": [
         {
-         "hovertemplate": "Methane=%{x}<br>index=%{y}<extra></extra>",
+         "hovertemplate": "Methane=%{x}<br>Year=%{y}<extra></extra>",
          "legendgroup": "",
          "line": {
           "color": "#636efa",
@@ -4160,9 +4160,6 @@
        "layout": {
         "legend": {
          "tracegroupgap": 0
-        },
-        "margin": {
-         "t": 60
         },
         "template": {
          "data": {
@@ -4980,6 +4977,9 @@
           }
          }
         },
+        "title": {
+         "text": "Methane release in the atmosphere has changed a lot throughout the years"
+        },
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -4997,7 +4997,7 @@
           1
          ],
          "title": {
-          "text": "index"
+          "text": "Year"
          }
         }
        }
