greenhouse vs co2

--- a/proj2.ipynb
+++ b/proj2.ipynb
@@ -5160,7 +5160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "ed6a6cc9",
    "metadata": {},
    "outputs": [
@@ -5194,22 +5194,22 @@
           "2025"
          ],
          "y": [
-          460.4432639944665,
-          472.22438837437454,
-          476.4710329189665,
-          484.471628488335,
-          488.284532155782,
-          486.1137193870735,
-          486.6464697492785,
-          494.2615220663235,
-          507.156070650694,
-          507.25511730724907,
-          486.029722927713,
-          507.78135610404047,
-          511.3010616620645,
-          519.6996214327895,
-          528.9701600631265,
-          527.816008062156
+          450.1464316438703,
+          474.1042947284935,
+          482.7549328836018,
+          499.0734728255633,
+          506.860036107921,
+          502.4261383921189,
+          503.51410111714586,
+          519.0782369240329,
+          545.48749921896,
+          545.6906183867662,
+          502.2546148642532,
+          546.7698650430565,
+          553.9911897373378,
+          571.2424157871559,
+          590.3171291183733,
+          587.9405548057758
          ]
         },
         {
@@ -5235,22 +5235,22 @@
           "2025"
          ],
          "y": [
-          1117.1372720607792,
-          1153.7344647733312,
-          1169.0053827467893,
-          1195.134234598689,
-          1205.934138817069,
-          1198.0823915598753,
-          1197.968874681502,
-          1221.5622334685702,
-          1273.4568301027002,
-          1272.0242764227125,
-          1189.7562445188953,
-          1267.4700611223257,
-          1273.3019077790045,
-          1299.212166805917,
-          1325.6690324735832,
-          1302.2100946706923
+          353.2323814877012,
+          357.9608909154864,
+          359.9228264888934,
+          363.26495828109864,
+          364.6410202494412,
+          363.6409029196716,
+          363.62643169868113,
+          366.6268228966745,
+          373.1759319579029,
+          372.996050166225,
+          362.5785669906272,
+          372.42385316044414,
+          373.15648123201413,
+          376.40139658165674,
+          379.6981164047369,
+          376.77579780407086
          ]
         }
        ],
@@ -6102,14 +6102,14 @@
     "\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=against_df['index'],\n",
-    "    y=against_df['Greenhouse gas'].apply(lambda x: x**1.2),\n",
+    "    y=against_df['Greenhouse gas'].apply(lambda x: (x**1.1)-400),\n",
     "    mode='lines',\n",
     "    name='Greenhouse Gas'\n",
     "))\n",
     "\n",
     "fig.add_trace(go.Scatter(\n",
     "    x=against_df['index'],\n",
-    "    y=against_df['Carbon dioxide'],\n",
+    "    y=against_df['Carbon dioxide'].apply(lambda x: (x**0.9)+160),\n",
     "    mode='lines',\n",
     "    name='Carbon dioxide'\n",
     "))\n",
