--- a/proj2.ipynb
+++ b/proj2.ipynb
@@ -5160,7 +5160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 100,
    "id": "ed6a6cc9",
    "metadata": {},
    "outputs": [
@@ -5255,6 +5255,22 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "color": "black",
+           "size": 14
+          },
+          "showarrow": false,
+          "text": "Dip due to<br>Covid 19",
+          "x": 0.72,
+          "xref": "paper",
+          "y": 0.5,
+          "yref": "paper"
+         }
+        ],
+        "paper_bgcolor": "whitesmoke",
+        "plot_bgcolor": "whitesmoke",
         "template": {
          "data": {
           "bar": [
@@ -6072,14 +6088,25 @@
          }
         },
         "title": {
-         "text": "Greenhouse gases and Carbon Dioxide emissions are not correlated"
+         "subtitle": {
+          "font": {
+           "color": "gray",
+           "size": 12
+          },
+          "text": "Greenhouse gas emissions are outpacing carbon dioxide emissions."
+         },
+         "text": "Greenhouse Gas and Carbon Dioxide Emissions are Not Correlated"
         },
         "xaxis": {
+         "gridcolor": "lightgray",
+         "showgrid": true,
          "title": {
           "text": "Year"
          }
         },
         "yaxis": {
+         "gridcolor": "lightgray",
+         "showgrid": true,
          "title": {
           "text": "Gas Emissions (in Million Metric Tons)"
          }
@@ -6115,11 +6142,40 @@
     "))\n",
     "\n",
     "fig.update_layout(\n",
-    "    title='Greenhouse gases and Carbon Dioxide emissions are not correlated',\n",
     "    xaxis_title='Year',\n",
-    "    yaxis_title='Gas Emissions (in Million Metric Tons)'\n",
+    "    yaxis_title='Gas Emissions (in Million Metric Tons)',\n",
+    "    #showlegend=False,\n",
+    "    title=dict(\n",
+    "        text = 'Greenhouse Gas and Carbon Dioxide Emissions are Not Correlated',\n",
+    "        subtitle=dict(\n",
+    "            text=\"Greenhouse gas emissions are outpacing carbon dioxide emissions.\",\n",
+    "            font=dict(size=12, color=\"gray\") # Customize font\n",
+    "        )\n",
+    "    ),\n",
+    "    plot_bgcolor='whitesmoke',   # inside the plot (behind bars)\n",
+    "    paper_bgcolor='whitesmoke',  # outside the plot area\n",
+    "    xaxis=dict(showgrid=True, gridcolor='lightgray'),\n",
+    "    yaxis=dict(showgrid=True, gridcolor='lightgray')\n",
     ")\n",
     "\n",
+    "fig.add_annotation(\n",
+    "    text=\"Dip due to<br>Covid 19\",\n",
+    "    xref=\"paper\", yref=\"paper\",\n",
+    "    x=0.72, y=0.50, showarrow=False,\n",
+    "    font=dict(size=14, color=\"black\")\n",
+    ")\n",
+    "# fig.add_annotation(\n",
+    "#     text=\"Greenhouse Gas\",\n",
+    "#     xref=\"paper\", yref=\"paper\",\n",
+    "#     x=0.30, y=0.80, showarrow=False,\n",
+    "#     font=dict(size=16, color=\"black\")\n",
+    "# )\n",
+    "# fig.add_annotation(\n",
+    "#     text=\"Carbon Dioxide\",\n",
+    "#     xref=\"paper\", yref=\"paper\",\n",
+    "#     x=0.32, y=0.17, showarrow=False,\n",
+    "#     font=dict(size=16, color=\"black\")\n",
+    "# )\n",
     "fig.show()"
    ]
   },
